--- a/proyekPBO/src/main/FormPendaftaran.form
+++ b/proyekPBO/src/main/FormPendaftaran.form
@@ -31,14 +31,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel1" pref="414" max="32767" attributes="0"/>
+              <Component id="jPanel1" pref="400" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="609" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="566" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -92,7 +92,7 @@
                               <Component id="tlpnTextField" max="32767" attributes="0"/>
                               <Component id="namaKegiatanComboBox" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="20" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -167,7 +167,7 @@
                       <Component id="ttlLabel" min="-2" max="-2" attributes="0"/>
                       <Component id="ttlDateChooser" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="49" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="hapusButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="daftarButton" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -360,6 +360,9 @@
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="2" name="D:\Documents\Java\proyekPBO\proyekPBO\src\assets\close.png"/>
+            </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
             </Property>
           </Properties>
           <Events>
