--- a/proyekPBO/src/main/LoginFrame.form
+++ b/proyekPBO/src/main/LoginFrame.form
@@ -258,6 +258,8 @@
                 <Property name="text" type="java.lang.String" value="Login"/>
               </Properties>
               <Events>
+                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="masukButtonMouseEntered"/>
+                <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="masukButtonMouseExited"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="masukButtonActionPerformed"/>
               </Events>
             </Component>
