--- a/proyekPBO/src/main/FormIkutKegiatan.form
+++ b/proyekPBO/src/main/FormIkutKegiatan.form
@@ -31,7 +31,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel1" pref="400" max="32767" attributes="0"/>
+              <Component id="jPanel1" pref="569" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -56,68 +56,55 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="namaKegiatanLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="nimLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="namaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jkLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="tingkatLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="alamatLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="tlpnLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="ttlLabel" min="-2" max="-2" attributes="0"/>
-                      <Component id="emailLabel" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" attributes="0">
+                  <EmptySpace pref="100" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                          <Component id="hapusButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="daftarButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="emailTextField" max="32767" attributes="0"/>
-                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                              <Component id="lakiRadioButton" min="-2" max="-2" attributes="0"/>
-                              <Component id="perempuanRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="tingkatComboBox" alignment="0" max="32767" attributes="0"/>
-                              <Component id="namaTextField" alignment="0" max="32767" attributes="0"/>
-                              <Component id="nimTextField" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jScrollPane1" alignment="0" pref="255" max="32767" attributes="0"/>
-                              <Component id="ttlDateChooser" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tlpnTextField" max="32767" attributes="0"/>
-                              <Component id="namaKegiatanComboBox" alignment="0" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="namaKegiatanLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="nimLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="namaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jkLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="tingkatLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="alamatLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="tlpnLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="ttlLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="emailLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                                  <Component id="hapusButton" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
+                                  <Component id="daftarButton" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="emailTextField" max="32767" attributes="0"/>
+                                  <Component id="lakiRadioButton" min="-2" max="-2" attributes="0"/>
+                                  <Component id="perempuanRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tingkatComboBox" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="namaTextField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="nimTextField" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane1" alignment="0" pref="255" max="32767" attributes="0"/>
+                                  <Component id="ttlDateChooser" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="tlpnTextField" max="32767" attributes="0"/>
+                                  <Component id="namaKegiatanComboBox" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
+                      <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
                   </Group>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-                  <Component id="closeLabel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace pref="106" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="closeLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" pref="108" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -167,12 +154,12 @@
                       <Component id="ttlLabel" min="-2" max="-2" attributes="0"/>
                       <Component id="ttlDateChooser" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="hapusButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="daftarButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="daftarButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="hapusButton" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -186,11 +173,13 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="Formulir Pendaftaran"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="2" name="D:\Documents\Java\proyekPBO\proyekPBO\src\assets\formdaftar.png"/>
             </Property>
@@ -355,19 +344,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Perempuan"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="closeLabel">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\Documents\Java\proyekPBO\proyekPBO\src\assets\close.png"/>
-            </Property>
-            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="closeLabelMouseClicked"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="namaKegiatanComboBox">
           <Properties>
