Decorator and fix ui
menambhakn ffilter pada beberapa TextField kemudian memperbaiki ui

--- a/proyekPBO/src/main/KegiatanFrame.form
+++ b/proyekPBO/src/main/KegiatanFrame.form
@@ -155,8 +155,8 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                  <Component id="daftarButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="46" max="32767" attributes="0"/>
+                  <Component id="daftarButton" min="-2" pref="29" max="-2" attributes="0"/>
+                  <EmptySpace pref="33" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
